datenschutz.css: renamed to style_datenschutz.css; datenschutz.html: modified (favicon added), index.html: link "Rezept des Tages" aug img added; style.css: "align-items: center;" in body wieder hinzugefügt; kontakt.html: correct font and favicon added

--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 main {
